# PasswordFucker

./: password-fucker.code-workspace
backend/: .gitignore  CMakeLists.txt  main.cpp
backend/src/: CMakeLists.txt  auth.cpp  auth.hpp  configuration.cpp  configuration.hpp  crypto.cpp  crypto.hpp  database-manager.cpp  database-manager.hpp  endpoints.cpp  endpoints.hpp  fix.hpp  http-server.cpp  http-server.hpp  log.cpp  log.hpp  passwords.cpp  passwords.hpp  runtime.cpp  runtime.hpp  utilities.cpp  utilities.hpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/dist-electron/: main.js
frontend/electron/: main.js
frontend/src/: App.vue  main.ts  style.css
frontend/src/router/: index.ts
frontend/src/services/: passwords.service.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: main.css  toast.css
frontend/src/views/: DashboardView.vue  LoginView.vue  PasswordsView.vue  SettingsView.vue
